Fixed call to action image sizing on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -374,5 +374,9 @@ nav.primary-nav {
     .call-to-action-image {
         @apply absolute inset-0;
         @apply flex items-center;
+        
+        & > * {
+            @apply h-full;
+        }
     }
 }
